--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -80,7 +80,7 @@
 <h5 class="mb-1">
   {{ user.first_name }} {{ user.last_name }}
   {% if user.is_verified %}
-    <img src="/static/verified.png" alt="موثّق" class="verified-badge">
+    <img src="/static/img/verified.png" alt="موثّق" class="verified-badge">
   {% endif %}
 </h5>
 
